@@ -8,6 +8,7 @@ iRedMail-0.9.3:
       new release since 2013 (the latest stable release doesn't support IPv6),
       we have throttling support in iRedAPD as replacement.
     * Improvements:
+        - Enable HSTS (HTTP Strict Transport Security) in both Apache and Nginx.
         - Update Fail2ban filter to catch postscreen log.
         - Enable global address book for SQL backends in SOGo by default,
           domains are isolated. Thanks dnwahs <shawn _at_ mcsp.net> for the
